<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_screen"
    android:background="@drawable/img">
    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/cc"
        android:layout_width="150dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_height="40dp"
        android:layout_below="@+id/viewTop"
        android:text="@string/currencyy"
        android:textSize="28sp" />
    <Space
        android:id="@+id/space"
        android:layout_width="10dp"
        android:layout_height="50dp"
        android:layout_below="@id/viewTop"
        android:layout_toEndOf="@+id/cc"/>
    <TextView
        android:id="@+id/temp"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:text="@string/temperature_converter"
        android:layout_below="@+id/viewTop"
        android:layout_toEndOf="@+id/space"
        android:textSize="28sp" />
    <LinearLayout
        android:id="@+id/line"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/value"
        android:hint="@string/enter_value"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <Spinner
        android:id="@+id/toCurrencySpinner"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:entries="@array/currency_types"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Spinner
            android:id="@+id/fromCurrencySpinner"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:entries="@array/currency_types"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="@color/green"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="28sp"/>
</LinearLayout>

</RelativeLayout>